# ga-quadratic

./: .clang-format  .clangd  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini  input.txt
.github/workflows/: release.yml
src/: main.cpp
src/ga/: chromosome.cpp  chromosome.hpp  ga.cpp  ga.hpp  population.cpp  population.hpp  problem.cpp  problem.hpp  rng.cpp  rng.hpp
src/gui/: app.cpp  app.hpp  platform.cpp  platform.hpp
src/io/: config.cpp  config.hpp  logger.cpp  logger.hpp
